[gd_scene load_steps=7 format=3 uid="uid://bkl2a6ey2cxpg"]

[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="1_hqvhd"]
[ext_resource type="StyleBox" uid="uid://dv72od2tskfeh" path="res://Theme/DarkBluePanel.tres" id="1_w86mx"]
[ext_resource type="Script" uid="uid://rvtufow2elj7" path="res://Scripts/MapSpot/Happenings/HappeningInstance.gd" id="2_nimax"]
[ext_resource type="PackedScene" uid="uid://mxfnm7hywo4f" path="res://Scenes/Old/damage_floater.tscn" id="4_6q6vd"]
[ext_resource type="PackedScene" uid="uid://dsw1gh7af04md" path="res://Scenes/Dialogue/Sound.tscn" id="5_fjydm"]
[ext_resource type="PackedScene" uid="uid://dp5ghsxs3xitl" path="res://Scenes/Dialogue/linetest.tscn" id="5_ylhno"]

[node name="HappeningInstance" type="PanelContainer" node_paths=PackedStringArray("OptionParent", "HappeningTitle", "HappeningText", "HappeningBackgroundTexture", "ProgBar", "NextDiagButton") groups=["Happening"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hqvhd")
theme_override_styles/panel = ExtResource("1_w86mx")
script = ExtResource("2_nimax")
OptionParent = NodePath("VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer")
HappeningTitle = NodePath("VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer/Label")
HappeningText = NodePath("VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer/Label2")
HappeningBackgroundTexture = NodePath("TextureRect")
ProgBar = NodePath("VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer/ProgressBar")
NextDiagButton = NodePath("VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer/NextDiag")
TextFloater = ExtResource("4_6q6vd")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="LineDrawer" parent="VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("5_ylhno")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = null
frequency = 352.325
amplitude = 27.745

[node name="Control" parent="VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("5_fjydm")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="PanelContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Control2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 26
text = "Testfwafwafawf
+awfwafwafawfwa
fawfwa
fwafwa"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer"]
layout_mode = 2
max_value = 3.0
value = 3.0
show_percentage = false

[node name="NextDiag" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Next"
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="Option1" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Option 1dwaddawdwadwadwadaawdwaddwaawdawfaw 
aaw faw
faw"
autowrap_mode = 2
expand_icon = true

[node name="Option2" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Option 1"
autowrap_mode = 2

[node name="Option3" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Option 1"
autowrap_mode = 2

[node name="Option4" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Option 1"
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/Control2/VBoxContainer/NextDiag" to="." method="_on_next_diag_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Option4" to="." method="_on_option_4_pressed"]
